# m02-p0202

./: .gitignore  README.md  demo_improvements.py  faiss.ipynb  pyproject.toml  spam advance.py  spam.ipynb  test_improvements.py
data/: spam_augmented.csv
log/: error_analysis.json  test_error_analysis.json
notebooks/: faiss.ipynb  runbook.ipynb  spam.ipynb
p02_m02/: pyvenv.cfg
p02_m02_main/: pyvenv.cfg
src/: app.py  config.py  error_analysis.json  generate_data.ipynb  models.py  requirements.txt  utils.py
