[project]
name = "spamshield"
version = "0.0.1"
description = "Smart spam dectector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools]
packages = ["spamshield"]
